--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ body {
 .hero-container {
     display: flex;
     height: 88%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/aguas_corrientes-full.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/aguas_corrientes-full.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -113,7 +113,7 @@ body {
 .hero-container-tickets {
     display: flex;
     height: 80%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/integrador-tickets.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/integrador-tickets.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -123,7 +123,7 @@ body {
 .hero-container-faq {
     display: flex;
     height: 80%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/integrador-faq.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/integrador-faq.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -133,7 +133,7 @@ body {
 .hero-container-contact {
     display: flex;
     height: 80%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/integrador-contact.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/integrador-contact.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -143,7 +143,7 @@ body {
 .hero-container-press {
     display: flex;
     height: 80%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/integrador-press.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/integrador-press.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -153,7 +153,7 @@ body {
 .hero-container-conference {
     display: flex;
     height: 80%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/integrador-conference.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/integrador-conference.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -163,7 +163,7 @@ body {
 .hero-container-tyc {
     display: flex;
     height: 80%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/integrador-tyc.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/integrador-tyc.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -173,7 +173,7 @@ body {
 .hero-container-privacy {
     display: flex;
     height: 80%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/integrador-privacy.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/integrador-privacy.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -183,7 +183,7 @@ body {
 .hero-container-student {
     display: flex;
     height: 80%;
-    background-image: linear-gradient(to right, #0000009c, #0000009c), url("/assets/img/integrador-students.jpg");
+    background-image: linear-gradient(to right, #0000009c, #0000009c), url("../assets/img/integrador-students.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
